--- a/src/app/components/home-screen/home-screen.component.css
+++ b/src/app/components/home-screen/home-screen.component.css
@@ -8,11 +8,11 @@
     height: 150px;
     border-radius: 20%;
     background-color: rgb(148, 133, 98);
-    margin-right: 20px; /* Adds space to the right of each child */
     display: flex; 
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+
 }
 
 .price {
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column; /* Stack child and price vertically */
     align-items: center; /* Center the items horizontally */
+    margin-right: 35px;
 }
 
 
@@ -41,3 +42,62 @@
 .child-container:last-child {
     margin-right: 0;
 }
+ 
+.cart-container {
+    
+    width: 350px;
+}
+  
+.cart-box {
+    background: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+}
+  
+.cart-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+  
+.cart-count {
+    font-size: 16px;
+}
+  
+.cart-button {
+    background-color: blue;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+.cart-items {
+    margin-top: 10px;
+    padding: 10px;
+    background: bisque;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+  
+.cart-items ul {
+    list-style-type: none;
+    padding: 0;
+
+}
+  
+.cart-items li {
+    padding: 5px 0;
+    font-size: 16px;
+}
+  
