--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="app-container">
     <app-side-bar></app-side-bar> 
-    <app-home-screen></app-home-screen>
+    <div class="main-container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
